gitops/cicd/sonarqube/postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarqube
  name: postgresql-sonarqube
  namespace: cicd
spec:
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: sonarqube
    deploymentconfig: postgresql-sonarqube
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
