gitops/cicd/sonarqube/sonarqube-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarqube
  name: sonarqube
  namespace: cicd
spec:
  ports:
  - name: sonarqube
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: sonarqube
    deploymentconfig: sonarqube
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
